--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghost-store",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Sell downloads and master classes on Ghost.",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/sunknudsen/ghost-store#readme",
   "dependencies": {
     "@tryghost/admin-api": "^1.5.0",
+    "body-parser": "^1.19.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "fs-extra": "^10.0.0",
@@ -26,10 +27,10 @@
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
-    "sequelize": "^6.15.0"
+    "sequelize": "^6.16.1"
   },
   "devDependencies": {
-    "npm-check-updates": "^12.2.1"
+    "npm-check-updates": "^12.3.0"
   },
   "prettier": {
     "endOfLine": "lf",
