--- a/.env.sample
+++ b/.env.sample
@@ -10,7 +10,7 @@ STRIPE_RESTRICTED_API_KEY_TOKEN=
 STRIPE_GHOST_JOIN_PRODUCT_ID=
 GHOST_API_URL=http://localhost:2368
 GHOST_ADMIN_API_KEY=
-GHOST_CONFIRMATION_PAGE=http://localhost:2368/almost-there/
+GHOST_CONFIRMATION_PAGE=
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USERNAME=
@@ -19,4 +19,3 @@ DOWNLOAD_LINK_EXPIRY=1
 FROM_NAME=
 FROM_EMAIL=
 BASE_URL=http://localhost:8443
-TEMPLATE=template.hbs
