--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ghost-store",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Sell downloads and masterclasses on Ghost.",
   "main": "index.js",
   "scripts": {
+    "code": "nodemon",
     "ncu": "ncu --target minor --upgrade"
   },
   "repository": {
@@ -27,10 +28,19 @@
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "npm-check-updates": "^12.5.2"
+  },
+  "nodemonConfig": {
+    "delay": 1000,
+    "ext": "js",
+    "watch": [
+      "index.js"
+    ],
+    "exec": "node index.js"
   },
   "prettier": {
     "endOfLine": "lf",
