Implemented ghost-cdn

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 DEBUG=true
 PORT=8443
 ADMIN_TOKEN=
+AUTH_TOKEN=
 MYSQL_DATABASE=ghost_store_prod
 MYSQL_USERNAME=ghost-store-123
 MYSQL_PASSWORD=
@@ -19,4 +20,5 @@ SMTP_PASSWORD=
 DOWNLOAD_LINK_EXPIRY=1
 FROM_NAME=
 FROM_EMAIL=
-BASE_URL=http://localhost:8443
+HMAC_SECRET=
+SESSION_CONCURRENCY=
