--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghost-store",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Sell downloads and masterclasses on Ghost.",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
   "dependencies": {
     "@tryghost/admin-api": "^1.8.0",
     "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^14.3.2",
     "express": "^4.17.3",
     "fs-extra": "^10.0.1",
@@ -27,12 +28,12 @@
     "handlebars": "^4.7.7",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
-    "npm-check-updates": "^12.5.2"
+    "npm-check-updates": "^12.5.4"
   },
   "nodemonConfig": {
     "delay": 1000,
