--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghost-store",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "Sell downloads and masterclasses on Ghost.",
   "main": "index.js",
   "scripts": {
@@ -19,21 +19,22 @@
   "homepage": "https://github.com/sunknudsen/ghost-store#readme",
   "dependencies": {
     "@tryghost/admin-api": "^1.8.0",
-    "body-parser": "^1.19.2",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^14.3.2",
     "express": "^4.17.3",
     "fs-extra": "^10.0.1",
     "got": "^11.8.3",
     "handlebars": "^4.7.7",
-    "moment": "^2.29.1",
+    "moment": "^2.29.2",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.17.0"
+    "p-whilst": "^2.1.0",
+    "sequelize": "^6.18.0"
   },
   "devDependencies": {
-    "npm-check-updates": "^12.5.5"
+    "npm-check-updates": "^12.5.7"
   },
   "nodemonConfig": {
     "delay": 1000,
