--- a/store.json.sample
+++ b/store.json.sample
@@ -23,8 +23,8 @@
       "redirect": "http://localhost:2368/bitcoin-self-custody-masterclass/"
     },
     "members": {
-      "discount": 0.15,
-      "coupon": "aVsxvMvx"
+      "coupon": "aVsxvMvx",
+      "discount": 0.15
     }
   }
 }
